# ast-mcp

./: package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: server.py
src/ast/typescript/: change_signature.ts
src/tools/: __init__.py  long_task.py  ts_change_signature.py
test/: example.js  example.ts  tsconfig.json
